Bug 1740737 - Part 1: Change OptimizeSpreadCall to return the optimised array or undefined. r=iain
The current `JSOp::OptimizeSpreadCall` optimisation only works when the input
is already a packed array. So it won't help to optimise code like
`super(...arguments)`, which is emitted by the TypeScript compiler when
creating default derived class constructors.

For example:
```ts
class Example extends Object {
  public name = "field";
}
```

Is compiled to:
```js
class Example extends Object {
  constructor() {
    super(...arguments);
    this.name = "field";
  }
}
```

To support this pattern, `JSOp::OptimizeSpreadCall` is changed to return a
packed array instead of returning `true` when the optimisation can be applied.
When the optimisation can't be used, `undefined` is returned instead of `false`.

The emitted byte code looks roughly like:
```
array_or_undef = optimiseSpreadCall(value);
if (array_or_undef === undefined) {
  // Emit iterator protocol code.
}
spreadCall(array_or_undef);
```

The additional comparison `array_or_undef === undefined` needs to be handled
during scalar replacement, so we can still scalar replace arrays in optimised
spread calls.

Parts 2-4 will add `arguments` support to `JSOp::OptimizeSpreadCall`.

Differential Revision: https://phabricator.services.mozilla.com/D130986

UltraBlame original commit: 1b951bd25193ef15cb0ba2edc85400a5e7034324

--- a/js/src/jit/LIROps.yaml
+++ b/js/src/jit/LIROps.yaml
@@ -2062,7 +2062,7 @@
   mir_op: true
 
 - name: OptimizeSpreadCallCache
-  result_type: WordSized
+  result_type: BoxedValue
   operands:
     value: BoxedValue
   num_temps: 1
