--- a/js/src/jit/MIROps.yaml
+++ b/js/src/jit/MIROps.yaml
@@ -1790,7 +1790,7 @@
 - name: OptimizeSpreadCallCache
   operands:
     value: Value
-  result_type: Boolean
+  result_type: Value
 
 - name: IteratorMore
   operands:
