Bug 1740737 - Part 2: Handle arguments in optimised spread calls. r=iain
When the `arguments` object is still in its initial state (no overridden
elements, length, or iterator), `...arguments` can be optimised to directly
create the spread array from the arguments' content instead of going through
the iterator code.

The CacheIR code additionally disallows overridden or forwarded arguments in
order to further optimise this operation during scalar replacement. See part 4.

Differential Revision: https://phabricator.services.mozilla.com/D130987

UltraBlame original commit: b89529d42aad09cb40d45a587925ef47f188c15f

--- a/js/src/jit/CacheIROps.yaml
+++ b/js/src/jit/CacheIROps.yaml
@@ -2780,6 +2780,13 @@
     map: ObjId
     obj: ObjId
 
+- name: ArrayFromArgumentsObjectResult
+  shared: true
+  transpile: false
+  cost_estimate: 5
+  args:
+    obj: ObjId
+
 - name: CallPrintString
   shared: true
   transpile: false
