Bug 1740737 - Part 3: Transpile ArrayFromArgumentsObjectResult. r=iain
The transpiled code simply calls a VM function and performs no further
optimisations.

Differential Revision: https://phabricator.services.mozilla.com/D130988

UltraBlame original commit: 51f6dd19dc14ef9bf7368100b927868fbd56a90b

--- a/js/src/jit/CacheIROps.yaml
+++ b/js/src/jit/CacheIROps.yaml
@@ -2782,7 +2782,7 @@
 
 - name: ArrayFromArgumentsObjectResult
   shared: true
-  transpile: false
+  transpile: true
   cost_estimate: 5
   args:
     obj: ObjId
