--- a/js/src/jit/MIROps.yaml
+++ b/js/src/jit/MIROps.yaml
@@ -459,6 +459,13 @@
   # property read.
   alias_set: custom
 
+# Create an array from an arguments object.
+- name: ArrayFromArgumentsObject
+  operands:
+    argsObject: Object
+  result_type: Object
+  possibly_calls: true
+
 # Guard that the given flags are not set on the arguments object.
 - name: GuardArgumentsObjectFlags
   operands:
