Backed out 6 changesets (bug 1741411, bug 1740737) for causing build bustages on CacheIR.cpp. CLOSED TREE
Backed out changeset 7f550858162e (bug 1741411)
Backed out changeset f87b1d574cbc (bug 1741411)
Backed out changeset 6ee89e252b76 (bug 1740737)
Backed out changeset 51f6dd19dc14 (bug 1740737)
Backed out changeset b89529d42aad (bug 1740737)
Backed out changeset 1b951bd25193 (bug 1740737)

UltraBlame original commit: ad14ebd54449c3e996a326cb62f28f5536d965db

--- a/js/src/jit/MIROps.yaml
+++ b/js/src/jit/MIROps.yaml
@@ -459,15 +459,6 @@
   # property read.
   alias_set: custom
 
-# Create an array from an arguments object.
-- name: ArrayFromArgumentsObject
-  operands:
-    argsObject: Object
-  arguments:
-    shape: Shape*
-  result_type: Object
-  possibly_calls: true
-
 # Guard that the given flags are not set on the arguments object.
 - name: GuardArgumentsObjectFlags
   operands:
@@ -1799,7 +1790,7 @@
 - name: OptimizeSpreadCallCache
   operands:
     value: Value
-  result_type: Value
+  result_type: Boolean
 
 - name: IteratorMore
   operands:
