Bug 1713092 - Remove redundant bitwise {and/or/xor}{32,64} for wasm-via-Ion.  r=lth.
This patch performs MIR-level folding of bitwise {and/or/xor}{32,64} arising
from wasm inputs.  JS handling of and/or/xor is unchanged -- this patch adds a
new path (MIR node) for the wasm/machine-level-semantics versions of these
operations, which then participates in constant folding (via GVN) in the
"normal" way.  Changes:

jit-test/tests/wasm/binop-x64-ion-folding.js:
* new file with test cases

jit/MIR.h:
* new node kind MWasmBinaryBitwise for wasm-only {and/or/xor}{32,64}

jit/MIR.cpp:
* new method MWasmBinaryBitwise::foldsTo to handle all folding cases
* added a few small helper functions for ::foldsTo

jit/Lowering.cpp:
* LIRGenerator::visitTest: also accept MWasmBinaryBitwise with subopcode And
  when creating LBitAndBranch instructions.
* LIRGenerator::lowerBitOp: change arg type from MBinaryBitwiseInstruction to
  MBinaryInstruction so as to also accept MWasmBinaryBitwise.
* LIRGenerator::visitWasmBinaryBitwise: new function.  Generate LIR using
  scheme identical to that of MBinaryBitwiseInstruction.

wasm/WasmIonCompile.cpp
* a new overload for MDefinition* binary(..), taking a
  MWasmBinaryBitwise::SubOpcode value
* generate MWasmBinaryBitwise as appropriate, via function
  EmitBitwiseAndOrXor
* remaining uses of EmitBitwise renamed to EmitShift

Differential Revision: https://phabricator.services.mozilla.com/D130038

UltraBlame original commit: d5aa4e7fd5f3f63ab414724291e6d1fd1a2a57a9

--- a/js/src/jit/MIROps.yaml
+++ b/js/src/jit/MIROps.yaml
@@ -2509,6 +2509,9 @@
 - name: WasmNeg
   gen_boilerplate: false
 
+- name: WasmBinaryBitwise
+  gen_boilerplate: false
+
 - name: WasmLoadTls
   gen_boilerplate: false
 
