Bug 1740453 - [devtools] Handle onTargetSelected in accessibility panel. r=ochameau.
A couple tests are added to check that the panel works fine when using the iframe picker.

Differential Revision: https://phabricator.services.mozilla.com/D130611

UltraBlame original commit: 64f6fc1a3ec77ceeb3caf05f0ca4c4dcc4c74d22

--- a/devtools/client/accessibility/test/browser/browser.ini
+++ b/devtools/client/accessibility/test/browser/browser.ini
@@ -37,12 +37,14 @@ fail-if = a11y_checks # bug 1687788 select accessible object button is not acces
 [browser_accessibility_sidebar.js]
 [browser_accessibility_simulation.js]
 skip-if = webrender # bug 1674060
+[browser_accessibility_tabbing_order_highlighter_iframe_picker.js]
 [browser_accessibility_tabbing_order_highlighter.js]
 [browser_accessibility_tree_audit_long.js]
 [browser_accessibility_tree_audit_reset.js]
 [browser_accessibility_tree_audit_toolbar.js]
 [browser_accessibility_tree_audit.js]
 [browser_accessibility_tree_contrast.js]
+[browser_accessibility_tree_iframe_picker.js]
 [browser_accessibility_tree_navigation_oop.js]
 [browser_accessibility_tree_navigation.js]
 [browser_accessibility_tree.js]
