Bug 1730394 - Use vendoring url in mach vendor and update moz.yamls accordingly; r=tjr
Depends on D124799

Differential Revision: https://phabricator.services.mozilla.com/D125337

UltraBlame original commit: 93e9a6acedc113123202460f6ab11f89d23a5b28

--- a/config/external/rlbox_wasm2c_sandbox/moz.yaml
+++ b/config/external/rlbox_wasm2c_sandbox/moz.yaml
@@ -16,7 +16,7 @@ origin:
   license-file: LICENSE
 
 vendoring:
-  url: https://github.com/PLSysSec/rlbox_wasm2c_sandbox.git
+  url: https://github.com/PLSysSec/rlbox_wasm2c_sandbox
   source-hosting: github
   vendor-directory: third_party/rlbox_wasm2c_sandbox
 
