Bug 1739602 - Add '"format": "url"' to 'developer.url' definition in JSON schema. r=rpl
Differential Revision: https://phabricator.services.mozilla.com/D130476

UltraBlame original commit: 1b2c9b6344ccf4868bf021b0cd5b81657790f6b6

--- a/toolkit/components/extensions/schemas/manifest.json
+++ b/toolkit/components/extensions/schemas/manifest.json
@@ -83,8 +83,10 @@
               },
               "url": {
                 "type": "string",
+                "format": "url",
                 "optional": true,
-                "preprocess": "localize"
+                "preprocess": "localize",
+                "onError": "warn"
               }
             }
           }
