Bug 1697875 - Annotate headless and backgroundtask mode in crash reports. r=gsvelto
Differential Revision: https://phabricator.services.mozilla.com/D129882

UltraBlame original commit: 81a8b5991a128d3fdefae7e4b55db9f2324b9387

--- a/toolkit/crashreporter/CrashAnnotations.yaml
+++ b/toolkit/crashreporter/CrashAnnotations.yaml
@@ -143,6 +143,17 @@ AvailableVirtualMemory:
   type: string
   ping: true
 
+BackgroundTaskMode:
+  description: >
+    True if the app was invoked in background task mode via `--backgroundtask ...`, false otherwise.
+  type: boolean
+
+BackgroundTaskName:
+  description: >
+    If the app was invoked in background task mode via `--backgroundtask <task name>`, the string "task name".
+  type: string
+  ping: true
+
 BlockedDllList:
   description: >
     Comma-separated list of blocked DLLS, Windows-only
@@ -346,6 +357,12 @@ GraphicsStartupTest:
   description: >
     Set to 1 by the graphics driver crash guard when it's activated.
   type: boolean
+
+HeadlessMode:
+  description: >
+    True if the app was invoked in headless mode via `--headless ...` or `--backgroundtask ...`, false otherwise.
+  type: boolean
+  ping: true
 
 PHCKind:
   description: >
