--- a/servo/ports/geckolib/cbindgen.toml
+++ b/servo/ports/geckolib/cbindgen.toml
@@ -234,6 +234,7 @@ include = [
   "PageSize",
   "DProperty",
   "ImageRendering",
+  "ScrollbarGutter",
 ]
 item_types = ["enums", "structs", "unions", "typedefs", "functions", "constants"]
 renaming_overrides_prefixing = true
