Bug 1741131: Document the possible misalignment of the annotation wrt stack status in child processes. r=xpcom-reviewers,nika
Differential Revision: https://phabricator.services.mozilla.com/D131325

UltraBlame original commit: 74c6b68d73d1b2a94d035f6e8c5c356f31f2b0a2

--- a/toolkit/crashreporter/CrashAnnotations.yaml
+++ b/toolkit/crashreporter/CrashAnnotations.yaml
@@ -990,6 +990,9 @@ Winsock_LSP:
 
 XPCOMSpinEventLoopStack:
   description: >
-    If we crash while some code is spinning manually the event
-    loop, we will see the stack of nested annotations here.
+    If we crash while some code is spinning manually the event loop on
+    the main thread, we will see the stack of nested annotations here.
+    If the crashing process was killed (e.g. due to an IPC error), this
+    annotation may be out-of-date with the captured stack in the minidump,
+    see bug 1741131 for details.
   type: string
