--- a/testing/web-platform/meta/css/css-text/text-transform/text-transform-fullwidth-004.xht.ini
+++ b/testing/web-platform/meta/css/css-text/text-transform/text-transform-fullwidth-004.xht.ini
@@ -1,4 +1,3 @@
 [text-transform-fullwidth-004.xht]
   expected:
-    if (os == "win") and (processor == "x86") and not debug: ["PASS", "FAIL"]
-    if os == "mac": FAIL
+    if os == "win": FAIL
