Bug 1576289 - Let color-scheme meta tag and property ride the trains. r=dholbert
There's two kinds of test failures remaining:

 * Failures related to how system colors inherit, which is something
   that no engine is shipping and I'm not convince it's a good thing:
   https://github.com/w3c/csswg-drafts/issues/6773

 * Failures related to <iframes> observing color-scheme of ancestors
   (which Chrome does implement but Safari doesn't):
   https://github.com/w3c/csswg-drafts/issues/4772
   https://bugzilla.mozilla.org/show_bug.cgi?id=1738380
   I'm unconvinced that should work across cross-origin iframes though
   (see the question at the end of that issue), and it seems delaying
   shipping it blocked on figuring that out while other engines ship
   diverging behaviors is probably not worth it.

Given privileged code is already using this and we know of no other
blockers, I think it's fine to let it ride the trains.

Differential Revision: https://phabricator.services.mozilla.com/D131635

UltraBlame original commit: 7c5a0fa01f7cda701dcec516a405bbdace28d173

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -6959,7 +6959,7 @@
 # Whether the `color-scheme` css property and meta tags are enabled.
 - name: layout.css.color-scheme.enabled
   type: RelaxedAtomicBool
-  value: @IS_EARLY_BETA_OR_EARLIER@
+  value: true
   mirror: always
   rust: true
 
