Bug 1557835 - Allow migration from Brave r=fluent-reviewers,Gijs
Differential Revision: https://phabricator.services.mozilla.com/D131731

UltraBlame original commit: a3dd5753b300daf657e6417183a5082f04131615

--- a/browser/components/migration/components.conf
+++ b/browser/components/migration/components.conf
@@ -1,8 +1,8 @@
-# -*- Mode: python; indent-tabs-mode: nil; tab-width: 40 -*-
-# vim: set filetype=python:
-# This Source Code Form is subject to the terms of the Mozilla Public
-# License, v. 2.0. If a copy of the MPL was not distributed with this
-# file, You can obtain one at http://mozilla.org/MPL/2.0/.
+
+
+
+
+
 
 XP_WIN = buildconfig.substs['OS_ARCH'] == 'WINNT'
 XP_MACOSX = buildconfig.substs['MOZ_WIDGET_TOOLKIT'] == 'cocoa'
@@ -13,6 +13,12 @@ Classes = [
         'contract_ids': ['@mozilla.org/toolkit/profile-migrator;1'],
         'jsm': 'resource:///modules/ProfileMigrator.jsm',
         'constructor': 'ProfileMigrator',
+    },
+    {
+        'cid': '{4071880a-69e4-4c83-88b4-6c589a62801d}',
+        'contract_ids': ['@mozilla.org/profile/migrator;1?app=browser&type=brave'],
+        'jsm': 'resource:///modules/ChromeProfileMigrator.jsm',
+        'constructor': 'BraveProfileMigrator',
     },
     {
         'cid': '{4cec1de4-1671-4fc3-a53e-6c539dc77a26}',
