Bug 1742383 - Enable memory64 in Nightly. r=yury
Push it out of the nest.

Differential Revision: https://phabricator.services.mozilla.com/D131791

UltraBlame original commit: d49d8003e35c69debbd83e84632954ee5f38fdcc

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -6428,7 +6428,7 @@
 #if defined(ENABLE_WASM_MEMORY64)
 -   name: javascript.options.wasm_memory64
     type: bool
-    value: false
+    value: @IS_NIGHTLY_BUILD@
     mirror: always
 #endif  // defined(ENABLE_WASM_MEMORY64)
 
