--- a/browser/extensions/webcompat/manifest.json
+++ b/browser/extensions/webcompat/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Web Compatibility Interventions",
   "description": "Urgent post-release fixes for web compatibility.",
-  "version": "28.5.0",
+  "version": "28.6.0",
   "applications": {
     "gecko": {
       "id": "webcompat@mozilla.org",
@@ -76,6 +76,7 @@
       "lib/module_shim.js",
       "lib/messaging_helper.js",
       "lib/intervention_helpers.js",
+      "lib/requestStorageAccess_helper.js",
       "lib/ua_helpers.js",
       "data/injections.js",
       "data/shims.js",
@@ -116,6 +117,7 @@
     "shims/iaspet.js",
     "shims/kinja.js",
     "shims/live-test-shim.js",
+    "shims/microsoftLogin.js",
     "shims/moat.js",
     "shims/mochitest-shim-1.js",
     "shims/mochitest-shim-2.js",
