--- a/extensions/permissions/test/unit/xpcshell.ini
+++ b/extensions/permissions/test/unit/xpcshell.ini
@@ -43,6 +43,8 @@ skip-if = toolkit == 'android' # Android doesn't use places
 skip-if = toolkit == 'android' # Android doesn't use places
 [test_permmanager_migrate_10-11.js]
 skip-if = toolkit == 'android' # Android doesn't use places
+[test_permmanager_migrate_11-12.js]
+skip-if = toolkit == 'android' # Android doesn't use places
 [test_permmanager_oa_strip.js]
 [test_permmanager_site_scope.js]
 [test_permmanager_remove_add_update.js]
