Bug 1731721 - Preliminary HTTP/3 fuzzing target r=dragana,decoder,necko-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D126177

UltraBlame original commit: a62dd031768d7713e85f95b15b8a74e8644e751c

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -4622,6 +4622,12 @@
     type: RelaxedAtomicBool
     value: false
     mirror: always
+
+-   name: fuzzing.necko.http3
+    type: RelaxedAtomicBool
+    value: false
+    mirror: always
+    rust: true
 #endif
 
 #---------------------------------------------------------------------------
