Bug 1617609: Enable sameSite=lax by default. r=ckerschb,dveditz
Differential Revision: https://phabricator.services.mozilla.com/D131943

UltraBlame original commit: 643bb56a34c40ba06cdb2eff40b70803854a4b2a

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -9291,7 +9291,7 @@
 
 - name: network.cookie.sameSite.laxByDefault
   type: bool
-  value: @IS_NIGHTLY_BUILD@
+  value: true
   mirror: always
 
 # lax-by-default 2 minutes tollerance for unsafe methods. The value is in seconds.
@@ -9302,12 +9302,12 @@
 
 - name: network.cookie.sameSite.noneRequiresSecure
   type: bool
-  value: @IS_NIGHTLY_BUILD@
+  value: true
   mirror: always
 
 - name: network.cookie.sameSite.schemeful
   type: bool
-  value: @IS_NIGHTLY_BUILD@
+  value: true
   mirror: always
 
 - name: network.cookie.thirdparty.sessionOnly
