Bug 1740044 - Enable Web Locks by default r=smaug
Differential Revision: https://phabricator.services.mozilla.com/D132100

UltraBlame original commit: ade3ed08e3e722d9e83daeaea21326862c4fe070

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -3982,7 +3982,7 @@
 # Whether the Web Locks API is enabled
 - name: dom.weblocks.enabled
   type: RelaxedAtomicBool
-  value: @IS_NIGHTLY_BUILD@
+  value: true
   mirror: always
 
 # Whether the WebMIDI API is enabled
