--- a/testing/web-platform/meta/webdriver/tests/set_window_rect/set.py.ini
+++ b/testing/web-platform/meta/webdriver/tests/set_window_rect/set.py.ini
@@ -2,8 +2,7 @@
   [test_negative_x_y]
     bug: 1563248
     expected:
-      if (os == "mac") and not debug: [PASS, FAIL]
-      if (os == "mac") and debug: [PASS, FAIL]
+      if (os == "mac") and headless: FAIL
       if (os == "linux") and fission: [PASS, FAIL]
 
   [test_restore_from_maximized]
