Bug 502258 - Add a Show Password button to <input type=password> controls.  r=Gijs
It's controlled by the pref:
layout.forms.input-type-show-password-button.enabled

Differential Revision: https://phabricator.services.mozilla.com/D130407

UltraBlame original commit: 68ad8a7fd3cc9ddcd32b346a9a572b9390470c82

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -7580,6 +7580,12 @@
   value: false
   mirror: always
 
+# Enables the Show Password button inside a <input type=password>.
+- name: layout.forms.input-type-show-password-button.enabled
+  type: bool
+  value: false
+  mirror: always
+
 # Pref to control browser frame rate, in Hz. A value <= 0 means choose
 # automatically based on knowledge of the platform (or 60Hz if no platform-
 # specific information is available).
