Bug 1556364 - Part 1: Implement validity attribute of ElementInternals; r=smaug
Differential Revision: https://phabricator.services.mozilla.com/D129810

UltraBlame original commit: 2c8c74e99e471a073f503314ce3f69f643ebfb11

--- a/testing/web-platform/meta/html/dom/idlharness.https.html.ini
+++ b/testing/web-platform/meta/html/dom/idlharness.https.html.ini
@@ -522,7 +522,8 @@ prefs: [dom.security.featurePolicy.experimental.enabled:true, dom.security.featu
     expected: FAIL
 
   [ElementInternals interface: attribute validity]
-    expected: FAIL
+    expected:
+      if release_or_beta: FAIL
 
   [SVGElement interface: attribute autofocus]
     expected: FAIL
