Bug 1556364 - Part 2-2: Implement validationMessage attribute of ElementInternals; r=smaug
Differential Revision: https://phabricator.services.mozilla.com/D129811

UltraBlame original commit: f6f7f949551fb95b5a153b92f6a38f8ffd4c0acf

--- a/testing/web-platform/meta/html/dom/idlharness.https.html.ini
+++ b/testing/web-platform/meta/html/dom/idlharness.https.html.ini
@@ -507,7 +507,8 @@ prefs: [dom.security.featurePolicy.experimental.enabled:true, dom.security.featu
     expected: FAIL
 
   [ElementInternals interface: attribute validationMessage]
-    expected: FAIL
+    expected:
+      if release_or_beta: FAIL
 
   [AudioTrack interface: existence and properties of interface prototype object's "constructor" property]
     expected: FAIL
