Bug 1556364 - Part 3: Implement setValidity() of ElementInternals; r=smaug
Differential Revision: https://phabricator.services.mozilla.com/D129821

UltraBlame original commit: 76fc30f27c399b6f44da68b19a4d575af00739b0

--- a/testing/web-platform/meta/html/dom/idlharness.https.html.ini
+++ b/testing/web-platform/meta/html/dom/idlharness.https.html.ini
@@ -576,7 +576,8 @@ prefs: [dom.security.featurePolicy.experimental.enabled:true, dom.security.featu
     expected: FAIL
 
   [ElementInternals interface: operation setValidity(optional ValidityStateFlags, optional DOMString, optional HTMLElement)]
-    expected: FAIL
+    expected:
+      if release_or_beta: FAIL
 
   [Navigator interface: operation registerProtocolHandler(DOMString, USVString)]
     expected:
