--- a/toolkit/components/extensions/test/mochitest/mochitest-common.ini
+++ b/toolkit/components/extensions/test/mochitest/mochitest-common.ini
@@ -46,6 +46,7 @@ support-files =
   file_webNavigation_manualSubframe_page1.html
   file_webNavigation_manualSubframe_page2.html
   file_with_about_blank.html
+  file_with_subframes_and_embed.html
   file_with_xorigin_frame.html
   head.js
   head_cookies.js
@@ -102,6 +103,7 @@ fail-if = xorigin # TypeError: can't access property "staticScripts", ext is und
 skip-if = (os == 'android') || (verify && debug && (os == 'linux')) # Bug 1617062
 [test_ext_contentscript_devtools_metadata.html]
 [test_ext_contentscript_fission_frame.html]
+[test_ext_contentscript_getFrameId.html]
 [test_ext_contentscript_incognito.html]
 skip-if = os == 'android' # Android does not support multiple windows.
 [test_ext_contentscript_permission.html]
