Backed out 5 changesets (bug 1556364) for causing web-platform test failures. CLOSED TREE
Backed out changeset dabffbe71a31 (bug 1556364)
Backed out changeset 76fc30f27c39 (bug 1556364)
Backed out changeset f6f7f949551f (bug 1556364)
Backed out changeset c77ef41d43d4 (bug 1556364)
Backed out changeset 2c8c74e99e47 (bug 1556364)

UltraBlame original commit: 422457edff0355ba42d7d5caab19fa9eb9457ee3

--- a/testing/web-platform/meta/custom-elements/form-associated/ElementInternals-validation.html.ini
+++ b/testing/web-platform/meta/custom-elements/form-associated/ElementInternals-validation.html.ini
@@ -1,4 +1,7 @@
 [ElementInternals-validation.html]
+  [validity and setValidity()]
+    expected: FAIL
+
   [reportValidity()]
     expected: FAIL
 
@@ -10,3 +13,7 @@
 
   ["anchor" argument of setValidity()]
     expected: FAIL
+
+  [Custom control affects :valid :invalid for FORM and FIELDSET]
+    expected: FAIL
+
