--- a/testing/web-platform/meta/html/dom/idlharness.https.html.ini
+++ b/testing/web-platform/meta/html/dom/idlharness.https.html.ini
@@ -507,8 +507,7 @@ prefs: [dom.security.featurePolicy.experimental.enabled:true, dom.security.featu
     expected: FAIL
 
   [ElementInternals interface: attribute validationMessage]
-    expected:
-      if release_or_beta: FAIL
+    expected: FAIL
 
   [AudioTrack interface: existence and properties of interface prototype object's "constructor" property]
     expected: FAIL
@@ -523,8 +522,7 @@ prefs: [dom.security.featurePolicy.experimental.enabled:true, dom.security.featu
     expected: FAIL
 
   [ElementInternals interface: attribute validity]
-    expected:
-      if release_or_beta: FAIL
+    expected: FAIL
 
   [SVGElement interface: attribute autofocus]
     expected: FAIL
@@ -576,8 +574,7 @@ prefs: [dom.security.featurePolicy.experimental.enabled:true, dom.security.featu
     expected: FAIL
 
   [ElementInternals interface: operation setValidity(optional ValidityStateFlags, optional DOMString, optional HTMLElement)]
-    expected:
-      if release_or_beta: FAIL
+    expected: FAIL
 
   [Navigator interface: operation registerProtocolHandler(DOMString, USVString)]
     expected:
