Bug 1742744 - part 2: Make `HTMLEditor` stop using `CreateElementTransaction` by default r=m_kato
`CreateElementTransaction` is too similar to `InsertNodeTransaction`. Only the
difference is, CreateElementTransaction::DoTransaction() creates an element via
editor instance and marks it dirty before inserting the new element. E.g.,
selection management and whether inserting new node or not at "redo" are same.

So, for the maintenance cost reason, we should get rid of
`CreateElementTransaction`, but for now, we should just make `HTMLEditor` use
`InsertNodeTransaction` instead, with a new pref to make it possible to back it
out the new behavior even after shipping.

Differential Revision: https://phabricator.services.mozilla.com/D132119

UltraBlame original commit: d4bd94bc7b58345d02f59b22f35ba6269d8fd2b0

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -4208,6 +4208,14 @@
 # Prefs starting with "editor"
 #---------------------------------------------------------------------------
 
+# Use CreateElementTransaction or not.  This is available only in a couple of
+# release cycles to make it possible to cancel stopping using
+# CreateElementTransaction.
+- name: editor.create_element_transaction.enabled
+  type: bool
+  value: false
+  mirror: always
+
 # Allow or disallow to delete `<hr>` element when caret is at start of
 # following line of the element.  If false, Backspace from start of following
 # line of an `<hr>` element causes moving caret to immediatly after the `<hr>`
