--- a/testing/web-platform/meta/service-workers/service-worker/partitioned-service-worker-getRegistrations.tentative.https.html.ini
+++ b/testing/web-platform/meta/service-workers/service-worker/partitioned-service-worker-getRegistrations.tentative.https.html.ini
@@ -1,4 +1,3 @@
 [partitioned-service-worker-getRegistrations.tentative.https.html]
-  expected: TIMEOUT
   [ServiceWorker's getRegistration() is partitioned]
-    expected: TIMEOUT
+    expected: FAIL
