--- a/docshell/test/mochitest/mochitest.ini
+++ b/docshell/test/mochitest/mochitest.ini
@@ -121,6 +121,10 @@ support-files =
 support-files =
   file_bug1740517.html
   file_bug1740517.html^headers^
+[test_bug1741132.html]
+support-files =
+  file_bug1741132.html
+skip-if = toolkit == "android" && !sessionHistoryInParent
 [test_close_onpagehide_by_history_back.html]
 [test_close_onpagehide_by_window_close.html]
 [test_compressed_multipart.html]
