Backed out changeset d486edc7499b (bug 1732201) for causing web-platform-tests failures on header-totalsfntsize-001.xht CLOSED TREE
UltraBlame original commit: afed7ee7a5dcee09542f3157224a54057527d842

--- a/.clang-format-ignore
+++ b/.clang-format-ignore
@@ -96,9 +96,7 @@ gfx/angle/.*
 gfx/cairo/.*
 gfx/graphite2/.*
 gfx/harfbuzz/.*
-gfx/ots/src/.*
-gfx/ots/include/.*
-gfx/ots/tests/.*
+gfx/ots/.*
 gfx/qcms/.*
 gfx/sfntly/.*
 gfx/skia/.*
@@ -169,8 +167,7 @@ modules/fdlibm/.*
 modules/freetype2/.*
 modules/libbz2/.*
 modules/pdfium/.*
-modules/woff2/include/.*
-modules/woff2/src/.*
+modules/woff2/.*
 modules/xz-embedded/.*
 modules/zlib/.*
 mozglue/misc/decimal/.*
