Bug 1743370 - Make extensions.spellcheck.inline.max-misspellings a static pref. r=masayuki
Differential Revision: https://phabricator.services.mozilla.com/D132341

UltraBlame original commit: 860d266fdbed188df49729930fe8a930146a3c8c

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -4299,6 +4299,12 @@
   value: false
   mirror: once
 
+# Maximum number of misspelled words in a text.
+- name: extensions.spellcheck.inline.max-misspellings
+  type: int32_t
+  value: 500
+  mirror: always
+
 # Whether the extensions can register a service worker on its own.
 # NOTE: WebExtensions Framework ability to register a background service worker
 # is not controlled by this pref, only the extension code ability to use
