--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -10029,6 +10029,12 @@
   value: false
   mirror: always
 
+# Whether to use the connection info that is generated asynchronously.
+- name: network.trr.async_connInfo
+  type: RelaxedAtomicBool
+  value: false
+  mirror: always
+
 # Allow the network changed event to get sent when a network topology or setup
 # change is noticed while running.
 - name: network.notify.changed
