--- a/netwerk/test/unit/xpcshell.ini
+++ b/netwerk/test/unit/xpcshell.ini
@@ -579,3 +579,6 @@ run-sequentially = node server exceptions dont replay well
 firefox-appdir = browser # needed for resource:///modules/policies/schema.jsm to be registered
 skip-if = os == "android"
 [test_early_hint_listener.js]
+[test_trr_with_proxy.js]
+head = head_channels.js head_cache.js head_cookies.js head_trr.js trr_common.js
+skip-if = os == "android"
