Bug 1743352 - [wdspec] Remove multiple statuses entries for windows jobs from meta files. r=webdriver-reviewers,jdescottes
Differential Revision: https://phabricator.services.mozilla.com/D132359

UltraBlame original commit: 020aa9921043df9ca518c0d6de38bd346dac3623

--- a/testing/web-platform/meta/webdriver/tests/set_window_rect/user_prompts.py.ini
+++ b/testing/web-platform/meta/webdriver/tests/set_window_rect/user_prompts.py.ini
@@ -3,8 +3,7 @@
     bug: 1602701
     expected:
       if (os == "mac") and debug: PASS
-      if os == "win": PASS
-      [PASS, FAIL]
+      if os == "linux": [PASS, FAIL]
 
   [test_accept[capabilities0-confirm-True\]]
     bug: 1602701
@@ -20,8 +19,7 @@
     bug: 1602701
     expected:
       if (os == "mac") and debug: PASS
-      if os == "win": PASS
-      [PASS, FAIL]
+      if os == "linux": [PASS, FAIL]
 
   [test_accept_and_notify[capabilities0-confirm-True\]]
     bug: 1602701
@@ -37,8 +35,7 @@
     bug: 1602701
     expected:
       if (os == "mac") and debug: PASS
-      if os == "win": PASS
-      [PASS, FAIL]
+      if os == "linux": [PASS, FAIL]
 
   [test_dismiss[capabilities0-confirm-False\]]
     bug: 1602701
@@ -54,8 +51,7 @@
     bug: 1602701
     expected:
       if (os == "mac") and debug: PASS
-      if os == "win": PASS
-      [PASS, FAIL]
+      if os == "linux": [PASS, FAIL]
 
   [test_dismiss_and_notify[capabilities0-confirm-False\]]
     bug: 1602701
@@ -70,8 +66,7 @@
   [test_ignore[capabilities0-alert\]]
     bug: 1602701
     expected:
-      if debug and (os == "win"): [PASS, FAIL, ERROR]
-      [PASS, FAIL]
+      if os == "linux": [PASS, FAIL]
 
   [test_ignore[capabilities0-confirm\]]
     bug: 1602701
@@ -86,8 +81,7 @@
   [test_default[alert-None\]]
     bug: 1602701
     expected:
-      if debug and (os == "win"): [PASS, FAIL, ERROR]
-      [PASS, FAIL]
+      if os == "linux": [PASS, FAIL]
 
   [test_default[confirm-False\]]
     bug: 1602701
