--- a/testing/web-platform/meta/webdriver/tests/get_window_rect/user_prompts.py.ini
+++ b/testing/web-platform/meta/webdriver/tests/get_window_rect/user_prompts.py.ini
@@ -2,8 +2,7 @@
   [test_accept[capabilities0-alert-None\]]
     bug: 1602701
     expected:
-      if (os == "win") and debug: [PASS, FAIL, ERROR]
-      [PASS, FAIL]
+      if os == "linux": [PASS, FAIL]
 
   [test_accept[capabilities0-confirm-True\]]
     bug: 1602701
@@ -19,8 +18,7 @@
     bug: 1602701
     expected:
       if (os == "mac") and debug: PASS
-      if os == "win": PASS
-      [PASS, FAIL]
+      if os == "linux": [PASS, FAIL]
 
   [test_accept_and_notify[capabilities0-confirm-True\]]
     bug: 1602701
@@ -35,8 +33,7 @@
   [test_dismiss[capabilities0-alert-None\]]
     bug: 1602701
     expected:
-      if (os == "win") and debug: [PASS, FAIL, ERROR]
-      [PASS, FAIL]
+      if os == "linux": [PASS, FAIL]
 
   [test_dismiss[capabilities0-confirm-False\]]
     bug: 1602701
@@ -51,8 +48,7 @@
   [test_dismiss_and_notify[capabilities0-alert-None\]]
     bug: 1602701
     expected:
-      if debug and (os == "win"): [PASS, FAIL, ERROR]
-      [PASS, FAIL]
+      if os == "linux": [PASS, FAIL]
 
   [test_dismiss_and_notify[capabilities0-confirm-False\]]
     bug: 1602701
@@ -68,8 +64,7 @@
     bug: 1602701
     expected:
       if (os == "mac") and debug: PASS
-      if os == "win": PASS
-      [PASS, FAIL]
+      if os == "linux": [PASS, FAIL]
 
   [test_ignore[capabilities0-confirm\]]
     bug: 1602701
@@ -85,8 +80,7 @@
     bug: 1602701
     expected:
       if (os == "mac") and debug: PASS
-      if os == "win": PASS
-      [PASS, FAIL]
+      if os == "linux": [PASS, FAIL]
 
   [test_default[confirm-False\]]
     bug: 1602701
