Bug 1741855 [wpt PR 31675] - Update wpt metadata, a=testonly
wpt-pr: 31675
wpt-type: metadata

UltraBlame original commit: f6f354accbf45e1c5be3f28cf3a1ac1cdf6f5ca7

--- a/testing/web-platform/meta/secure-payment-confirmation/constructor.https.html.ini
+++ b/testing/web-platform/meta/secure-payment-confirmation/constructor.https.html.ini
@@ -1,4 +1,4 @@
-[secure-payment-confirmation-constructor.https.html]
+[constructor.https.html]
   [Valid payment method data does not throw exceptions.]
     expected: FAIL
 
