Bug 1742165 [wpt PR 31688] - Update wpt metadata, a=testonly
wpt-pr: 31688
wpt-type: metadata

UltraBlame original commit: 3515020ec386528559b151f43234b56aab7adc0c

--- a/testing/web-platform/meta/css/mediaqueries/dynamic-range.html.ini
+++ b/testing/web-platform/meta/css/mediaqueries/dynamic-range.html.ini
@@ -28,3 +28,9 @@
 
   [Check that video-dynamic-range is 'standard' or 'high', but not both]
     expected: FAIL
+
+  [Check that dynamic-range always matches 'standard']
+    expected: FAIL
+
+  [Check that video-dynamic-range always matches 'standard']
+    expected: FAIL
