--- a/testing/web-platform/meta/cookies/samesite/window-open-reload.https.html.ini
+++ b/testing/web-platform/meta/cookies/samesite/window-open-reload.https.html.ini
@@ -1,3 +1,6 @@
 [window-open-reload.https.html]
   [Reloaded cross-site auxiliary navigations are laxly same-site]
     expected: FAIL
+
+  [Reloaded cross-site auxiliary navigations are strictly same-site]
+    expected: FAIL
