Bug 1742174 [wpt PR 31690] - Update wpt metadata, a=testonly
wpt-pr: 31690
wpt-type: metadata

UltraBlame original commit: 10ba5d013eb20e01b683d844abf7ecc92f33c500

--- a/testing/web-platform/meta/service-workers/service-worker/same-site-cookies.https.html.ini
+++ b/testing/web-platform/meta/service-workers/service-worker/same-site-cookies.https.html.ini
@@ -158,3 +158,33 @@
 
   [same-origin, form post with change-request, cross-site redirect, and same-origin redirect]
     expected: NOTRUN
+
+  [same-origin, nested window.open with cross-site middle frame and no service worker]
+    expected: NOTRUN
+
+  [same-origin, nested window.open with cross-site middle frame and fallback service worker]
+    expected: NOTRUN
+
+  [same-origin, nested window.open with cross-site middle frame and passthrough service worker]
+    expected: NOTRUN
+
+  [same-origin, nested window.open with cross-site middle frame and change-request service worker]
+    expected: NOTRUN
+
+  [same-origin, nested window.open with cross-site middle frame and navpreload service worker]
+    expected: NOTRUN
+
+  [same-origin, nested set location with cross-site middle frame and no service worker]
+    expected: NOTRUN
+
+  [same-origin, nested set location with cross-site middle frame and fallback service worker]
+    expected: NOTRUN
+
+  [same-origin, nested set location with cross-site middle frame and passthrough service worker]
+    expected: NOTRUN
+
+  [same-origin, nested set location with cross-site middle frame and change-request service worker]
+    expected: NOTRUN
+
+  [same-origin, nested set location with cross-site middle frame and navpreload service worker]
+    expected: NOTRUN
