Bug 1741317 [wpt PR 31638] - Update wpt metadata, a=testonly
wpt-pr: 31638
wpt-type: metadata

UltraBlame original commit: 38d11a8a39a6ee472c0ea20ad0afe51f3922bb82

--- a/testing/web-platform/meta/html/cross-origin-opener-policy/popup-coop-by-sw.https.html.ini
+++ b/testing/web-platform/meta/html/cross-origin-opener-policy/popup-coop-by-sw.https.html.ini
@@ -23,8 +23,9 @@
   expected:
     if debug and (os == "win") and not fission and (processor == "x86_64"): [TIMEOUT, CRASH]
     if debug and (os == "linux") and fission: [CRASH, TIMEOUT]
-    if debug and (os == "linux") and not fission: [TIMEOUT, CRASH]
     if debug and (os == "win") and fission: [CRASH, TIMEOUT]
+    if (os == "linux") and debug and not swgl: [TIMEOUT, CRASH]
+    if (os == "linux") and debug and swgl: [TIMEOUT, CRASH]
     TIMEOUT
   [opener:coi, openee:basic, sw:basic]
     expected: TIMEOUT
