--- a/testing/web-platform/meta/html/infrastructure/urls/resolving-urls/query-encoding/windows-1251.html.ini
+++ b/testing/web-platform/meta/html/infrastructure/urls/resolving-urls/query-encoding/windows-1251.html.ini
@@ -287,9 +287,11 @@
 
 [windows-1251.html?include=workers]
   expected:
-    if (os == "linux") and not fission and debug: [TIMEOUT, OK]
-    if (os == "linux") and fission and not debug: [TIMEOUT, OK]
+    if (os == "linux") and debug and fission: [TIMEOUT, OK]
+    if (os == "linux") and not debug and (processor == "x86"): [TIMEOUT, OK]
+    if (os == "mac") and debug: [TIMEOUT, OK]
     if (os == "mac") and not debug: [TIMEOUT, OK]
+    if debug and swgl and (os == "linux"): [TIMEOUT, OK]
     [OK, TIMEOUT]
   [SharedWorker() in a shared worker]
     expected: FAIL
@@ -301,9 +303,11 @@
 
   [SharedWorker constructor]
     expected:
-      if (os == "linux") and fission and not debug: [TIMEOUT, PASS]
-      if (os == "linux") and not fission and debug: [TIMEOUT, PASS]
+      if (os == "linux") and not debug and (processor == "x86"): [TIMEOUT, PASS]
+      if (os == "linux") and debug and fission: [TIMEOUT, PASS]
       if (os == "mac") and not debug: [TIMEOUT, PASS]
+      if (os == "mac") and debug: [TIMEOUT, PASS]
+      if debug and swgl and (os == "linux"): [TIMEOUT, PASS]
       [PASS, TIMEOUT]
 
   [SharedWorker() in a dedicated worker]
