--- a/testing/web-platform/meta/html/infrastructure/urls/resolving-urls/query-encoding/windows-1252.html.ini
+++ b/testing/web-platform/meta/html/infrastructure/urls/resolving-urls/query-encoding/windows-1252.html.ini
@@ -115,13 +115,10 @@
 
 [windows-1252.html?include=workers]
   expected:
-    if not swgl and (os == "win") and not fission and not debug and (processor == "x86_64"): [TIMEOUT, OK]
-    if not swgl and (os == "win") and not fission and debug and (processor == "x86"): [TIMEOUT, OK]
-    if not swgl and (os == "linux") and (processor == "x86_64") and not fission and debug: [TIMEOUT, OK]
-    if not swgl and (os == "linux") and (processor == "x86_64") and not fission and not debug: [TIMEOUT, OK]
-    if not swgl and (os == "mac") and debug: [TIMEOUT, OK]
-    if swgl and (os == "linux"): [TIMEOUT, OK]
-    if swgl and (os == "android"): [TIMEOUT, OK]
+    if (os == "linux") and not fission and not debug and (processor == "x86"): [TIMEOUT, OK]
+    if (os == "linux") and not fission and debug: [TIMEOUT, OK]
+    if (os == "win") and not debug and (processor == "x86"): [TIMEOUT, OK]
+    if (os == "android") and debug and swgl: [TIMEOUT, OK]
     [OK, TIMEOUT]
   [SharedWorker() in a shared worker]
     expected: FAIL
@@ -134,13 +131,10 @@
 
   [SharedWorker constructor]
     expected:
-      if not swgl and (os == "linux") and (processor == "x86_64") and not fission and debug: [TIMEOUT, PASS]
-      if not swgl and (os == "linux") and (processor == "x86_64") and not fission and not debug: [TIMEOUT, PASS]
-      if not swgl and (os == "win") and not fission and debug and (processor == "x86"): [TIMEOUT, PASS]
-      if not swgl and (os == "win") and not fission and not debug and (processor == "x86_64"): [TIMEOUT, PASS]
-      if not swgl and (os == "mac") and debug: [TIMEOUT, PASS]
-      if swgl and (os == "linux"): [TIMEOUT, PASS]
-      if swgl and (os == "android"): [TIMEOUT, PASS]
+      if (os == "linux") and not fission and not debug and (processor == "x86"): [TIMEOUT, PASS]
+      if (os == "win") and not debug and (processor == "x86"): [TIMEOUT, PASS]
+      if (os == "linux") and not fission and debug: [TIMEOUT, PASS]
+      if (os == "android") and debug and swgl: [TIMEOUT, PASS]
       [PASS, TIMEOUT]
 
   [SharedWorker() in a dedicated worker]
