--- a/testing/web-platform/meta/service-workers/service-worker/installing.https.html.ini
+++ b/testing/web-platform/meta/service-workers/service-worker/installing.https.html.ini
@@ -3,6 +3,4 @@
     if verify: fails in verify mode
   [installing is set]
     expected:
-      if (os == "linux") and not debug and webrender: ["FAIL", "PASS"]
-      FAIL
-
+      if (os == "linux") and not debug and webrender: [FAIL, PASS]
