Bug 1743034 [wpt PR 31749] - Update wpt metadata, a=testonly
wpt-pr: 31749
wpt-type: metadata

UltraBlame original commit: 33106bf7544d7e24aa260c99b633f398e1a99e24

--- a/testing/web-platform/meta/css/css-scroll-snap/input/keyboard.html.ini
+++ b/testing/web-platform/meta/css/css-scroll-snap/input/keyboard.html.ini
@@ -14,8 +14,8 @@
 
   [Snaps to top-right after pressing ArrowRight]
     expected:
-      if (os == "linux") and debug and not fission: ["NOTRUN", "PASS", "FAIL"]
-      if os == "mac": ["NOTRUN", "PASS", "FAIL"]
+      if (os == "linux") and debug and not fission: [NOTRUN, PASS, FAIL]
+      if os == "mac": [NOTRUN, PASS, FAIL]
       NOTRUN
 
   [If the original intended offset is valid as making a snap area cover thesnapport, and there's no other snap offset in between, use the originalintended offset]
@@ -24,3 +24,10 @@
   [If there is no valid snap offset on the arrow key's direction other than the current offset, and the scroll-snap-type is mandatory, stay at the current offset.]
     expected: NOTRUN
 
+  [Snaps to bottom-left after pressing ArrowDown]
+    expected:
+      if not swgl and not debug and (os == "win") and (processor == "x86_64"): [FAIL, PASS]
+      if not swgl and not debug and (os == "win") and (processor == "x86"): [PASS, FAIL]
+      if not swgl and not debug and (os == "linux"): [FAIL, PASS]
+      if swgl: PASS
+      FAIL
