--- a/testing/web-platform/meta/screen-capture/getdisplaymedia.https.html.ini
+++ b/testing/web-platform/meta/screen-capture/getdisplaymedia.https.html.ini
@@ -2,8 +2,8 @@
   disabled:
     if (os == "android") and e10s: bug 1550895 (frequently fails on geckoview)
   expected:
-    if (os == "win") and debug: [TIMEOUT, OK, CRASH]
-    if (os == "win") and not debug: [TIMEOUT, OK]
+    if (os == "win") and debug: [OK, CRASH]
+    if (os == "win") and not debug: [OK]
   [getDisplayMedia() with getSettings]
     expected:
       if os == "win": [NOTRUN, FAIL]
@@ -13,32 +13,5 @@
     expected:
       if (os == "linux") and debug and fission: [PASS, FAIL]
       if (os == "mac") and debug: [PASS, FAIL]
-      if os == "win": [TIMEOUT, PASS, FAIL]
+      if os == "win": [PASS, FAIL]
 
-  [getDisplayMedia({"video":{"width":{"max":0}}}) must fail with OverconstrainedError]
-    expected:
-      if os == "win": [NOTRUN, PASS]
-
-  [getDisplayMedia({"video":{"height":{"max":0}}}) must fail with OverconstrainedError]
-    expected:
-      if os == "win": [NOTRUN, PASS]
-
-  [getDisplayMedia({"video":{"frameRate":{"max":0}}}) must fail with OverconstrainedError]
-    expected:
-      if os == "win": [NOTRUN, PASS]
-
-  [getDisplayMedia({"video":{"width":{"max":-1}}}) must fail with OverconstrainedError]
-    expected:
-      if os == "win": [NOTRUN, PASS]
-
-  [getDisplayMedia({"video":{"height":{"max":-1}}}) must fail with OverconstrainedError]
-    expected:
-      if os == "win": [NOTRUN, PASS]
-
-  [getDisplayMedia({"video":{"frameRate":{"max":-1}}}) must fail with OverconstrainedError]
-    expected:
-      if os == "win": [NOTRUN, PASS]
-
-  [getDisplayMedia() resolves with stream with video track]
-    expected:
-      if os == "win": [NOTRUN, PASS]
