Bug 1566146 - Implement Set methods union, intersection, difference, symmetricDifference, isSubsetOf, isSuperSetOf, isDisjointFrom as per https://tc39.es/proposal-set-methods/ r=arai
Differential Revision: https://phabricator.services.mozilla.com/D131799

UltraBlame original commit: 574eeabe438aa8aa461f83dd8796b5456aa2067a

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -6275,6 +6275,14 @@
   value: false
   mirror: always
 
+#if defined(ENABLE_NEW_SET_METHODS)
+  # Experimental support for New Set methods
+- name: javascript.options.experimental.enable_new_set_methods
+  type: bool
+  value: false
+  mirror: always
+#endif
+
   # Experimental support for Top-level Await in JavaScript.
 -   name: javascript.options.experimental.top_level_await
     type: bool
