Bug 1743567 - Enable predictive prefetch on nightly+early beta r=dragana
Differential Revision: https://phabricator.services.mozilla.com/D132460

UltraBlame original commit: ebff584e29419a3a72568b712e8f9e4de9c795da

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -9566,7 +9566,7 @@
 
 - name: network.predictor.enable-prefetch
   type: bool
-  value: @IS_NIGHTLY_BUILD@
+  value: @IS_EARLY_BETA_OR_EARLIER@
   mirror: always
 
 - name: network.predictor.page-degradation.day
