Bug 1741422 - Add tests for the 103 responses over HTTP/2 r=necko-reviewers,valentin
GetHeader can return NS_ERROR_NOT_AVAILABLE which is not a fatal error and we should not assert.

Differential Revision: https://phabricator.services.mozilla.com/D131376

UltraBlame original commit: aa2a07bf1eb148f6fcc732153418ac68dd3b0c14

--- a/netwerk/test/unit/xpcshell.ini
+++ b/netwerk/test/unit/xpcshell.ini
@@ -411,6 +411,8 @@ skip-if =
 [test_captive_portal_service.js]
 run-sequentially = node server exceptions dont replay well
 skip-if = socketprocess_networking
+[test_early_hint_listener_http2.js]
+run-sequentially = node server exceptions dont replay well
 [test_dns_by_type_resolve.js]
 [test_network_connectivity_service.js]
 [test_suspend_channel_on_authRetry.js]
