--- a/testing/web-platform/meta/secure-payment-confirmation/enrollment.https.html.ini
+++ b/testing/web-platform/meta/secure-payment-confirmation/enrollment.https.html.ini
@@ -11,6 +11,7 @@
 
   [Payment credential requires userVerification to be "required", not "preferred".]
     expected:
+      if (os == "linux") and ccov: TIMEOUT
       if (os == "linux") and not debug and (processor == "x86_64") and not fission: [FAIL, NOTRUN]
       if (os == "linux") and not debug and (processor == "x86_64") and fission: [FAIL, NOTRUN]
       if (os == "linux") and not debug and (processor == "x86"): [NOTRUN, FAIL]
